<resources>
    <string name="app_name">SAMANA-USER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bantuan_title">Bantuan</string>
    <string name="berita_title">Berita</string>
    <string name="profile_title">Profile</string>
    <string name="image_news">imageNews</string>
    <string name="title">Judul</string>
    <string name="subtitle">Subtitle</string>
    <string name="nik_label">Nik</string>
    <string name="password_label">Password</string>
    <string name="detailNews">Detail News</string>
    <string name="author">Author</string>
    <string name="wawan">Wawan</string>
    <string name="loading">Loading...</string>
    <string name="user_not_found">User tidak ditemukan</string>
    <string name="cek_connection">Please Retry your connection</string>
    <string name="nik_must_filled">Nik harus Di Isi</string>
    <string name="password_must_filled">Password Harus Di isi</string>
</resources>