<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/socialAssistanceFragment">

    <fragment
        android:id="@+id/socialAssistanceFragment"
        android:name="com.aditprayogo.samana_user.presentation.social_assistance.SocialAssistanceFragment"
        android:label="@string/bantuan_title"
        tools:layout="@layout/fragment_social_assistance" />

    <fragment
        android:id="@+id/newsFragment"
        android:name="com.aditprayogo.samana_user.presentation.news.NewsFragment"
        android:label="@string/berita_title"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.aditprayogo.samana_user.presentation.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" />

</navigation>